--- a/Simon/public/index.html
+++ b/Simon/public/index.html
@@ -3,10 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/
-  css?family=Original+Surfer&effect=emboos' rel='stylesheet' type='text/css">
-  <link rel="stylesheet" href="CSS/index.css">
-  <title>Document</title>
+  <title>Simon Game</title>
 </head>
 <body>
   
