Fix(css): Corrected typo and styled game panel

--- a/Simon/public/index.html
+++ b/Simon/public/index.html
@@ -7,6 +7,6 @@
   <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
-  <div class="penel"></div>
+  <div class="panel"></div>
 </body>
 </html>
