Refactor: Add 'panel' class to game panels

--- a/Simon/public/index.html
+++ b/Simon/public/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
-  <div class="bottom-left-panel"></div>
-  <div class="bottom-right-panel"></div>
-  <div class="top-left-panel"></div>
-  <div class="top-right-panel"></div>
+  <div class="panel bottom-left-panel"></div>
+  <div class="panel bottom-right-panel"></div>
+  <div class="panel top-left-panel"></div>
+  <div class="panel top-right-panel"></div>
 </body>
 </html>
