Fix: Wrap panels in divs for layout consistency

--- a/Simon/public/index.html
+++ b/Simon/public/index.html
@@ -7,9 +7,15 @@
   <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
-  <div class="panel bottom-left-panel"></div>
-  <div class="panel bottom-right-panel"></div>
-  <div class="panel top-left-panel"></div>
-  <div class="panel top-right-panel"></div>
+  <div>
+    <div class="panel top-left-panel"></div>
+    <div class="panel top-right-panel"></div>
+  </div>
+  <div>
+    <div class="panel bottom-left-panel"></div>
+    <div class="panel bottom-right-panel"></div>
+  </div>
+
+
 </body>
 </html>
