feat: Add center div to HTML and basic CSS class

--- a/Simon/public/index.html
+++ b/Simon/public/index.html
@@ -15,5 +15,6 @@
       <div class="panel bottom-left-panel"></div>
       <div class="panel bottom-right-panel"></div>
     </div>
+    <div class="center"></div>
   </body>
 </html>
