feat: Structure HTML for game board layout

--- a/Simon/public/index.html
+++ b/Simon/public/index.html
@@ -7,14 +7,16 @@
   <link rel="stylesheet" href="CSS/index.css">
 </head>
   <body>
-    <div>
+  <div class="container">
+    <div class="row">
       <div class="panel top-left-panel"></div>
       <div class="panel top-right-panel"></div>
     </div>
-    <div>
+    <div class="row">
       <div class="panel bottom-left-panel"></div>
       <div class="panel bottom-right-panel"></div>
     </div>
     <div class="center"></div>
-  </body>
+  </div>
+</body>
 </html>
