--- a/Dino_run/public/index.html
+++ b/Dino_run/public/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
-    
+    <div class="game">
+        <div class="character"></div>
+        <div class="block"></div>
+    </div>
 </body>
 <script src="JS/index.js"></script>
 </html>
