--- a/Dino_run/public/index.html
+++ b/Dino_run/public/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
-    <div class="game">
-        <div class="character"></div>
-        <div class="block"></div>
+    <div id="game">
+        <div id="character"></div>
+        <div id="block"></div>
     </div>
 </body>
 <script src="JS/index.js"></script>
