--- a/Dino_run/public/index.html
+++ b/Dino_run/public/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" onclick="jump()">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dino-run</title>
-    <link rel="stylesheet" href="CSS/index.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Dino-run</title>
+  <link rel="stylesheet" href="CSS/index.css" />
 </head>
 <body>
-    <div id="game">
-        <div id="character"></div>
-        <div id="block"></div>
-    </div>
+  <div id="game">
+    <div id="character"></div>
+    <div id="block"></div>
+  </div>
+
+  <script src="JS/index.js"></script>
 </body>
-<script src="JS/index.js"></script>
 </html>
