feat: Add basic HUD with score and high score placeholders

--- a/Dino_run/public/index.html
+++ b/Dino_run/public/index.html
@@ -7,12 +7,15 @@
   <link rel="stylesheet" href="CSS/index.css" />
 </head>
 <body>
-    
+    <div id="hud">
+        <div id="score">00000</div>
+        <div id="hi">HI 00000</div>
+    </div>
 
-  <div id="game">
-    <div id="character"></div>
-    <div id="block"></div>
-  </div>
+    <div id="game">
+        <div id="character"></div>
+        <div id="block"></div>
+    </div>
 
   <script src="JS/index.js"></script>
 </body>
