--- a/Dino_run/public/index.html
+++ b/Dino_run/public/index.html
@@ -13,7 +13,9 @@
     </div>
 
     <div id="game">
-        <div id="character"></div>
+        <div id="ground"></div>
+        <div id="clouds"></div>
+        <div id="character" class="run"></div>
         <div id="block"></div>
     </div>
 
