feat: Add initial game overlay with start message

--- a/Dino_run/public/index.html
+++ b/Dino_run/public/index.html
@@ -17,6 +17,10 @@
         <div id="clouds"></div>
         <div id="character" class="run"></div>
         <div id="block"></div>
+
+        <div id="overlay">
+            <div id="title">CLICK / SPACE TO START</div>
+        </div>
     </div>
 
   <script src="JS/index.js"></script>
