feat: Add subtitle with jump instructions

--- a/Dino_run/public/index.html
+++ b/Dino_run/public/index.html
@@ -20,6 +20,7 @@
 
         <div id="overlay">
             <div id="title">CLICK / SPACE TO START</div>
+            <div id="subtitle">JUMP: CLICK, SPACE, ↑</div>
         </div>
     </div>
 
