feat: Remove initial 'run' class from character

--- a/Dino_run/public/index.html
+++ b/Dino_run/public/index.html
@@ -15,7 +15,7 @@
     <div id="game">
         <div id="ground"></div>
         <div id="clouds"></div>
-        <div id="character" class="run"></div>
+        <div id="character"></div>
         <div id="block"></div>
 
         <div id="overlay">
